package com.wvl.negocio.entidades;

public class Proveedor {
  private String nombre;
  private String ruc;
  private String telefono;
  public Proveedor(String nombre, String ruc) {
    this.nombre = nombre;
    this.ruc = ruc;
  }
}
